@@ -4,7 +4,7 @@ $EM_CONF[$_EXTKEY] = [
     'title' => 'Debug Mysql or other DB',
     'description' => 'Extends \\TYPO3\\CMS\\Core\\Database\\DatabaseConnection and \\TYPO3\\CMS\\Core\\Database\\Connection to show Errors and Debug-Messages. Debugging of sql-queries by debug and FileWriter.',
     'category' => 'misc',
-    'version' => '1.3.2',
+    'version' => '1.4.0',
     'state' => 'stable',
     'uploadfolder' => 0,
     'clearcacheonload' => 0,
